Unlinked collections that are under another collection reappear when loading a scene #113778

Closed
opened 2023-10-16 17:48:06 +02:00 by Robert Rioux · 1 comment

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA RTX 6000 Ada Generation/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 537.42

Blender Version
Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: e1ccd9d4a1d3
Worked: (newest version of Blender that worked as expected)

Short description of error
Unlinked collections that are under another collection reappear when loading a scene

Exact steps for others to reproduce the error

A year ago I submitted this bug that was later fixed but the fix doesn't work if the unlinked collection is in another one.

#101499

Link all three collections into a new scene. Uncheck Instance Collection and Instance Object Data.

Unlink the sphere collection. Save the file. Reopen the file. The sphere collection will be back.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA RTX 6000 Ada Generation/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 537.42 **Blender Version** Broken: version: 3.5.1, branch: blender-v3.5-release, commit date: 2023-04-24 18:11, hash: `e1ccd9d4a1d3` Worked: (newest version of Blender that worked as expected) **Short description of error** Unlinked collections that are under another collection reappear when loading a scene **Exact steps for others to reproduce the error** A year ago I submitted this bug that was later fixed but the fix doesn't work if the unlinked collection is in another one. https://projects.blender.org/blender/blender/issues/101499 Link all three collections into a new scene. Uncheck Instance Collection and Instance Object Data. Unlink the sphere collection. Save the file. Reopen the file. The sphere collection will be back.
Robert Rioux added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-10-16 17:48:06 +02:00
Member

Thanks for the report. Similar fix can be applied here too (i.e. Abort unlink operation)

Thanks for the report. Similar fix can be applied here too (i.e. Abort unlink operation)
Pratik Borhade added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-10-17 06:11:47 +02:00
Pratik Borhade self-assigned this 2023-10-17 06:47:44 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-17 12:39:15 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113778
No description provided.