Fix #113778: Skip unlinking a linked collection if parent is linked

Similar to 197f3d75d1, do not unlink a linked collection from a linked parent

Pull Request: https://projects.blender.org/blender/blender/pulls/113805